# design_automator

./: .gitignore  Dockerfile  README.md  README_template.md  current_design.stp  design_proposed.json  design_requirements.json  design_requirements.py  design_successful.json  design_successfull.json  example_simulation.py  example_simulation_cad.py  example_simulation_neutronics.py  plot_improvements.py  proposed_design.json  pyproject.toml  setup.cfg  update_readme.py
.devcontainer/: devcontainer.json
.github/workflows/: create_release.yml  docker_publish.yml  improvement_tbr.yml  improvement_vessel_weight.yml  improvements_radius.yml  radius_improvements.yml  radius_requirements.yml  requirement_vessel_weight.yml  requirements_radius.yml  requirements_tbr.yml  tbr_improvement.yml  tbr_improvement_compile.yml  tbr_requirements.yml  test_TBR.yml  test_vessel_weight_improvement.yml  test_vessel_weight_requirement.yml  update_design_point.yml  update_readme.yml
design_automator/: __init__.py  _version.py  core.py  design_requirements.py
tests/: test_create_cad.py  test_dagmc_creation.py  test_improvement_radius.py  test_improvement_tbr.py  test_improvement_weight.py  test_radius_improvement.py  test_radius_requirement.py  test_requirement_radius.py  test_requirement_tbr.py  test_requirement_weight.py  test_tbr_improvement.py  test_tbr_requirement.py  test_weight_improvement.py  test_weight_requirement.py
