[metadata]
name = design_automator
version = attr: design.__version__
author = Jonathan Shimwell
author_email = mail@jshimwell.com
description = A demonstration of automated neutronics design checking against a set of requirements.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shimwell/example_automated_design_checker
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/shimwell/example_automated_design_checker
    Tracker = https://github.com/shimwell/example_automated_design_checker/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1
    setuptools_scm
    # paramak is required as well but not available on pypi

[options.extras_require]
tests = 
    pytest >= 5.4.3
